Add some content

--- a/lessons.html
+++ b/lessons.html
@@ -102,7 +102,8 @@
                     </div>
                     <div class="content-sample">
                         <img src="./images/lessonsImg/if-sample.png" alt="">
-                        <img src="./images/lessonsImg/if-else-sample.png" alt="">
+                        <img src="./images/lessonsImg/if-sample1.png" alt="">
+                        <img src="./images/lessonsImg/if-sample2.png" alt="">
                     </div>
                 </div>
                 <div class="content">
@@ -111,7 +112,6 @@
                         <p>More stuff to do with more data.In the real world an array is like a list (shopping list)</p>
                     </div>
                     <div class="content-sample">
-                        <img src="./images/lessonsImg/if-sample.png" alt="">
                         <img src="./images/lessonsImg/array-sample.png" alt="">
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         </p>
                     </div>
                     <div class="content-sample">
-                        <img src="./images/lessonsImg/HTML-tag.png" alt="">
+                        <img src="./images/lessonsImg/htmlTagSample.png" alt="">
                         <img src="./images/lessonsImg/sample-tag.png" alt="">
                     </div>
                 </div>                
@@ -222,6 +222,19 @@
                     <div class="content-sample">
                         <img src="./images/lessonsImg/animation.png" alt="" style="height: 300px;">
                         <div id="sampleAnimation" style="width: 200px;height: 200px;border-radius: 50%;background-color: yellowgreen;"></div>
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>SQL</h3>
+                        <p>
+                            SQL is a standard language for storing, manipulating and retrieving data in databases.
+                            For creating a table in sql we use key word "CREATE TABLE" then table name.
+                            Here there is a sample for making a table, defining fields with data type, insert data, and delete data.
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/sqlSyntax.png" alt="" style="height: 300px;">
                     </div>
                 </div>                
             </div>
