improve link address

--- a/sampleProjects.html
+++ b/sampleProjects.html
@@ -31,7 +31,7 @@
             <div class="project">
                 <div class="project-content">
                     <h2>E-commerce project</h2>
-                    <img src="/images/shopScreen.png" alt="">
+                    <img src="./images/shopScreen.png" alt="">
                 </div>
             </div>
         </div>
