Add week 3 content

--- a/index.html
+++ b/index.html
@@ -117,13 +117,40 @@
                     </div>
                 </div>
             </div>
+
             <div class="accor-content">
                 <input type="radio" name="accordion" id="three">
                 <label for="three">Week 3<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
                     <div class="main-content">
                         <div class="improvement">
-                            <div style="width: 100%;">content will be posted soon</div>
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                In this week I learned how to do a project step by step by software development life cycle.                             
+                            </p>
+                            <p class="more-info"><b>For more information about my experience please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="solutions">
+                            <span class="material-symbols-outlined">door_sliding</span>
+                            <h2>Solutions</h2>
+                            <p>
+                                I used flexbox in my project and I got beter 
+                            </p>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>In learning process I always research and review my lessens when I have a problem. Also I think seeing aother's code and analysis them and comparing with my code is very useful</p>
+                        </div>
+                        <div class="project">
+                            <span class="material-symbols-outlined">tactic</span>
+                            <h2>Project</h2>
+                            <p>
+                                I improved my journal's styles and content 
+                            </p>
+                            <a href="./sampleProjects.html">Pictures of completed project</a>
                         </div>
                     </div>
                 </div>
