--- a/lessons.html
+++ b/lessons.html
@@ -129,6 +129,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="lesson">
                 <h2>Week 2</h2>
                 <div class="content">
@@ -238,6 +239,27 @@
                     </div>
                 </div>                
             </div>
+
+            <div class="lesson">
+                <h2>Week 3</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Project management</h3>
+                        <p>Software Development Life Cycle</p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li><i>Analysis:</i> Understand the problem that needs to be solved. How can the current situation be improved?</li><br>
+                            <li><i>Design:</i> Using the software specification, design a solution. </li><br>
+                            <li><i>Development:</i> Create the solution using the appropriate programming languages and tools. </li><br>
+                            <li><i>Testing:</i> Test the solution against the requirements. Does it do what the client wanted? </li><br>
+                            <li><i>Deployment:</i> Roll the software out.  This may be done in stages with a parallel ‘test phase’ where both old and new systems are run side by side so that any issue do not impact on client business. </li><br>
+                            <li><i>Maintenance:</i> Deal with any bugs that arise, identify potential improvements</li><br>
+                        </ul>
+                    </div>
+                </div>                
+            </div>
+
         </div>
     </section>
 
