Add content for week4

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="accordion-wraper">
             <h1 class="animate-header">Weekly experience</h1>
             <div class="accordion-sction" id="accordion">
-            <div class="accor-content">
+                <div class="accor-content">
                 <input type="radio" name="accordion" id="one">
                 <label for="one">Week 1<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
@@ -73,8 +73,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="accor-content">
+                </div>
+
+                <div class="accor-content">
                 <input type="radio" name="accordion" id="two">
                 <label for="two">Week 2<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
@@ -112,9 +113,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
 
-            <div class="accor-content">
+                <div class="accor-content">
                 <input type="radio" name="accordion" id="three">
                 <label for="three">Week 3<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
@@ -149,19 +150,48 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="accor-content">
+                </div>
+
+                <div class="accor-content">
                 <input type="radio" name="accordion" id="four">
                 <label for="four">Week 4<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
                     <div class="main-content">
                         <div class="improvement">
-                            <div style="width: 100%;">content will be posted soon</div>
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                In this week I learned how to do a project step by step by software development life cycle.                             
+                            </p>
+                            <p class="more-info"><b>For more information about my experience please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="solutions">
+                            <span class="material-symbols-outlined">door_sliding</span>
+                            <h2>Solutions</h2>
+                            <p>
+                                I used flexbox in my project and I got beter 
+                            </p>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>In learning process I always research and review my lessens when I have a problem. Also I think seeing aother's code and analysis them and comparing with my code is very useful</p>
+                        </div>
+                        <div class="project">
+                            <span class="material-symbols-outlined">tactic</span>
+                            <h2>Project</h2>
+                            <p>
+                                In this week I did drumkit project
+                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>
+                                <a href="moeinzideh.github.io/audioProject/"></a>
+                            </p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="accor-content">
+                </div>
+
+                <div class="accor-content">
                 <input type="radio" name="accordion" id="five">
                 <label for="five">Week 5<span class="material-symbols-outlined">event</span></label>
                 <div class="accor-text">
@@ -171,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
             </div>
         </div>
     </article>
