--- a/lessons.html
+++ b/lessons.html
@@ -255,6 +255,34 @@
                     </div>
                 </div>                
             </div>
+            <div class="lesson">
+                <h2>Week 4</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>JS DOM</h3>
+                        <p>DOM represents a webpage as a tree  like structure</p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week4/jsDomTree.png" alt="">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Document Object</h3>
+                        <p>In JS we can select and control  elements of the currently loaded webpage</p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li>getElementById()</li>
+                            <li>getElementsByClassName()</li>
+                            <li>getElementsByTagName()</li>
+                            <li>querySelectorAll()</li>
+                            <li>querySelector()</li>
+                        </ul>
+                        <img src="./images/week4/jsGetElemCode.png" alt="" style="width: 500px;">
+                    </div>
+                </div>                
+            </div>
 
         </div>
     </section>
