Add week 4 content

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                             <h2>Project</h2>
                             <p>
                                 In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
-                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>    
+                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below link</b>    
                             </p>
-                            <a href="./sampleProjects.html">Pictures of completed project</a>
+                            <a href="./images/projectsImg/shopScreen.png">Pictures of completed project</a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,8 @@
                             <span class="material-symbols-outlined">construction</span>
                             <h2>Improvement</h2>
                             <p>
-                                In this week I learned how to do a project step by step by software development life cycle.                             
+                                Our topics were js DOM and advance SQL. I learned how to creat complex query by joining tables together.
+                                Also I learned how to select html element in js and set events on them.                        
                             </p>
                             <p class="more-info"><b>For more information about my experience please click on link below</b></p>
                             <a href="./lessons.html">Details informations</a>
@@ -170,7 +171,7 @@
                             <span class="material-symbols-outlined">door_sliding</span>
                             <h2>Solutions</h2>
                             <p>
-                                I used flexbox in my project and I got beter 
+                                At first I have issue with getElementsByClassName and then I found that it returns array so I can control them now. 
                             </p>
                         </div>
                         <div class="errors">
@@ -183,8 +184,8 @@
                             <h2>Project</h2>
                             <p>
                                 In this week I did drumkit project
-                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>
-                                <a href="moeinzideh.github.io/audioProject/"></a>
+                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below link</b>
+                                <a href="./images/projectsImg/drumKit.png">DrumKit image</a>
                             </p>
                         </div>
                     </div>
