--- a/lessons.html
+++ b/lessons.html
@@ -282,6 +282,16 @@
                         <img src="./images/week4/jsGetElemCode.png" alt="" style="width: 500px;">
                     </div>
                 </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Set events</h3>
+                        <p>For setting key or mouse events we use "addEventListener"</p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week4/addEvent1.png" alt="" style="width: 500px;">
+                        <img src="./images/week4/addEvent2.png" alt="" style="width: 500px;">
+                    </div>
+                </div>                
             </div>
 
         </div>
