add week 4 contents

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <p>
                                 In this week I did drumkit project
                                 <br><b>For visiting this project please click on "Projects" in navbar menu or click on below link</b>
-                                <a href="./images/projectsImg/drumKit.png">DrumKit image</a>
+                                <a href="./sampleProjects.html">DrumKit image</a>
                             </p>
                         </div>
                     </div>
