--- a/sampleProjects.html
+++ b/sampleProjects.html
@@ -31,7 +31,13 @@
             <div class="project">
                 <div class="project-content">
                     <h2>E-commerce project</h2>
-                    <img src="./images/shopScreen.png" alt="">
+                    <img src="./images/projectsImg/shopScreen.png" alt="">
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-content">
+                    <h2>Drum kit project</h2>
+                    <img src="./images/projectsImg/drumKit.png" alt="">
                 </div>
             </div>
         </div>
