--- a/lessons.html
+++ b/lessons.html
@@ -255,6 +255,7 @@
                     </div>
                 </div>                
             </div>
+
             <div class="lesson">
                 <h2>Week 4</h2>
                 <div class="content">
@@ -290,6 +291,16 @@
                     <div class="content-sample">
                         <img src="./images/week4/addEvent1.png" alt="" style="width: 500px;">
                         <img src="./images/week4/addEvent2.png" alt="" style="width: 500px;">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>SQL advance query</h3>
+                        <p>We can creat complex query by joining tables together.</p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week4/SQL1.png" alt="" style="width: 500px; height: auto;">
+                        <img src="./images/week4/SQL2.png" alt="" style="width: 500px; height: auto;">
                     </div>
                 </div>                
             </div>
