--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="accordion-wraper">
             <h1 class="animate-header">Weekly experience</h1>
             <div class="accordion-sction" id="accordion">
+
                 <div class="accor-content">
                 <input type="radio" name="accordion" id="one">
                 <label for="one">Week 1<span class="material-symbols-outlined">event</span></label>
@@ -70,6 +71,7 @@
                                 <br><b>For visiting pictures of project please click on link blow</b>    
                             </p>
                             <a href="./sampleProjects.html">Pictures of completed project</a>
+                            <a href="https://moeinzideh.github.io/eCommerce/" target="_blank">Live preview e-commerce</a>
                         </div>
                     </div>
                 </div>
@@ -185,8 +187,10 @@
                             <p>
                                 In this week I did drumkit project
                                 <br><b>For visiting this project please click on "Projects" in navbar menu or click on below link</b>
-                                <a href="./sampleProjects.html">DrumKit image</a>
                             </p>
+                            <a href="./sampleProjects.html">DrumKit image</a>
+                            <a href="https://moeinzideh.github.io/audioProject/" target="_blank">Live preview Drumkit</a>
+                            <a href="https://moeinzideh.github.io/keyGenerator/" target="_blank">Live preview key generator</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +202,32 @@
                 <div class="accor-text">
                     <div class="main-content">
                         <div class="improvement">
-                            <div style="width: 100%;">content will be posted soon</div>
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                I learned concept of scope in js also I learned how to use higher order functions. 
+                            </p>
+                            <p class="more-info"><b>For more information about my experience please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="solutions">
+                            <span class="material-symbols-outlined">door_sliding</span>
+                            <h2>Solutions</h2>
+                            <p>
+                                I had some issue in js scope and higher order functions in my tasks so I reviewed lessons and solved them.
+                            </p>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>In learning process I always research and review my lessens when I have a problem. Also I think seeing aother's code and analysis them and comparing with my code is very useful</p>
+                        </div>
+                        <div class="project">
+                            <span class="material-symbols-outlined">tactic</span>
+                            <h2>Project</h2>
+                            <p>
+                                I did sql project in this week includ normalisation and create table and advance query
+                            </p>
                         </div>
                     </div>
                 </div>
