--- a/lessons.html
+++ b/lessons.html
@@ -305,6 +305,70 @@
                 </div>                
             </div>
 
+            <div class="lesson">
+                <h2>Week 5</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>JavaScript Engines</h3>
+                        <p>A javascript engine executes javascript. <b>V8</b> is the name of the JavaScript engine that powers Google Chrome.</p>
+                    </div>
+                    <div class="content-sample">
+                        <p>Three fundamental parts of the  JavaScript engine :</p>
+                        <ol>
+                            <li>Execution contex</li>
+                            <li>Memory environment</li>
+                            <li>Thread of execution</li>
+                        </ol>
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Scope in JS</h3>
+                        <p>We’ve all experienced it…  Sometimes we have access to a  variable we’ve created and  sometimes we don’t ..why?  <b>Because of scope.</b></p>
+                    </div>
+                    <div class="content-sample">
+                        <p>There are 3 types of variable scope :</p>
+                        <ol>
+                            <li>Global Scope :</li>
+                            <p>Variables declared Globally (outside any  function) have Global Scope.
+                                Global variables can be accessed from  anywhere in a JavaScript program.
+                            </p>
+                            <img src="./images/week4/jsGlobalScope.png" alt="" style="height: auto;">
+
+                            <li>Function Scope</li>
+                            <p>Javascript has function scope, meaning  each function creates a new scope.
+                                Variables declared inside a function are  not accessible from outside the function
+                            </p>
+                            <img src="./images/week4/jsFunScope.png" alt="" style="height: auto;">
+                            <li>Block Scope</li>
+                            <p>Before ES6 (2015) Javascript only had
+                                global scope and function scope.
+                                ES6 introduced the Let and Const  keywords. These two keywords provide  block scope in Javascript.
+                                Variables declared inside a block cannot  be accessed outside a block.
+                                Let’s compare and contrast the old  keyword Var with Let in a For Loop.
+                            </p>
+                            <img src="./images/week4/jsBlockScope.png" alt="" style="height: auto;">
+                        </ol>
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Higher Order Functions</h3>
+                        <p>Functions which accept a function as a  parameter.ORFunctions which return a function.</p>
+                    </div>
+                    <div class="content-sample">
+                        <p>Example One :</p>
+                        <img src="./images/week4/jsHigherFunc.png" alt="" style="height: auto;">
+                        <p>Example Two :</p>
+                        <img src="./images/week4/jsHigherFunc2.png" alt="" style="height: auto;">
+                        <p>Example Three :</p>
+                        <img src="./images/week4/jsHigherFunc3.png" alt="" style="height: auto;">
+                        <p>Example Four :</p>
+                        <img src="./images/week4/jsHigherFunc4.png" alt="" style="height: auto;">
+                    </div>
+                </div>                                
+            </div>
+
         </div>
     </section>
 
