Add week6 contents

--- a/lessons.html
+++ b/lessons.html
@@ -369,6 +369,79 @@
                 </div>                                
             </div>
 
+            <div class="lesson">
+                <h2>Week 6</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Objects</h3>
+                        <p>
+                            objects are containers that can store data and functions. We use Key-Value pairs to store the data. 
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week6/objects.png" alt="">
+                        <p>Access data in an object</p>                        
+                        <img src="./images/week6/callObjects.png" alt="">                        
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Using Functions Objects</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week6/usingFuncsObj.png" alt="">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Asynchronous JavaScript</h3>
+                    </div>
+                    <div class="content-sample">
+                        <p>To explore what synchronous and asynchronous mean
+                            To be able to work with higher order functions and be familiar with  callback functions
+                            To recognise what promises are in JavaScript
+                            To identify the async and await keywords and use them to handle  data
+                        </p>
+                        <p>
+                            In JavaScript, synchronous refers to our  code executing one thing at a time. So  our program waits until the current  function has finished before moving on  to the next.
+                        </p>
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>JavaScript Promise Object</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week6/promise.png" alt="" style="height: auto;">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Waiting for a Timeout</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week6/await.png" alt="" style="height: auto;">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Waiting for a File</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week6/awaitAfile.png" alt="" style="height: auto;">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>What is Inquirer?</h3>
+                    </div>
+                    <div class="content-sample">
+                        <p>
+                            Inquirer is an NPM package that provides an easy way to capture user input in your Node.js command line interface applications. It provides several methods for asking questions and returning answers from the user that can be accessed by a .then promise function.
+                        </p>
+                    </div>
+                </div>                                               
+            </div>
         </div>
     </section>
 
