Add content of week 7

--- a/lessons.html
+++ b/lessons.html
@@ -442,6 +442,45 @@
                     </div>
                 </div>                                               
             </div>
+
+            <div class="lesson">
+                <h2>Week 7</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>React js</h3>
+                        <p>
+                            React is The library for web and native user interfaces
+                        </p>
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Create React Application</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week7/npx.png" alt="">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Folder Structure</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week7/folderStr.png" alt="" st>
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Run react app</h3>
+                        <code>npm start</code>
+                    </div>
+                    <div class="content-sample">
+                        <p>Runs the app in the development mode. Open http://localhost:3000 to view it in the browser.
+                            The page will reload if you make edits. You will also see any lint errors in the console.
+                        </p>
+                    </div>
+                </div>                                                                                            
+            </div>
         </div>
     </section>
 
