Add content week8

--- a/lessons.html
+++ b/lessons.html
@@ -481,6 +481,40 @@
                     </div>
                 </div>                                                                                            
             </div>
+
+            <div class="lesson">
+                <h2>Week 8</h2>                                              
+                <div class="content">
+                    <div class="content-header">
+                        <h3>React lifecycle</h3>
+                        <p>To explore lifecycle methods in both class and functional components
+                            To be familiar with ComponentDidMount, ComponentDidUpdate and  ComponentWillUnmount
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week8/lifecycle.png" alt="">
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Fetching Data</h3>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/week8/Fetch.png" alt="" st>
+                    </div>
+                </div>                                               
+                <div class="content">
+                    <div class="content-header">
+                        <h3>What is "useEffect" Hook?</h3>
+                        <p>When fetching external data use this hook to control the
+                            lifecycle effects.
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                      <img src="./images/week8/useFetch.png" alt="">
+                    </div>
+                </div>                                                                                            
+            </div>
         </div>
     </section>
 
