--- a/index.html
+++ b/index.html
@@ -285,6 +285,30 @@
                     </div>
                 </div>
                 </div>
+
+                <div class="accor-content">
+                <input type="radio" name="accordion" id="eight">
+                <label for="eight">Week 8<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                I learned react and concept of component base
+                            </p>
+                            <p class="more-info"><b>For more information about my experience please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>In learning process I always research and review my lessens when I have a problem. Also I think seeing aother's code and analysis them and comparing with my code is very useful</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                
             </div>
         </div>
     </article>
